payment swagger fixed
